@@ -30,8 +30,6 @@ import org.junit.Test;
 import org.ode4j.math.DMatrix3;
 import org.ode4j.math.DQuaternion;
 import org.ode4j.math.DVector3;
-import org.ode4j.ode.DMass;
-import org.ode4j.ode.OdeHelper;
 import org.ode4j.ode.internal.DLCP;
 import org.ode4j.ode.internal.DxMass;
 import org.ode4j.ode.internal.ErrorHdl.ErrorJump;
